[tool.poetry]
name = "runner"
version = "0.1.0"
description = ""
authors = ["Anonymous <Anonymous>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1"
pyrebase4 = "^4.3.0"
werkzeug = "^0.16.0"
pyrebase = "^3.0"



[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
